--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head lang='en'>
         <meta charset='utf-8'>
         <title>Elise's Website: Wordle Helper</title>
-        <link rel='stylesheet' type='text/css' href='wordle.css'>
-        <script type='text/javascript' src='wordle.js'></script>
+        <link rel='stylesheet' type='text/css' href='wordle/wordle.css'>
+        <script type='text/javascript' src='wordle/wordle.js'></script>
+        <!-- <script src="./HeaderComponent.js" type="module"></script> -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
     </head>
     <body>
         <header></header>
