building out main page

--- a/index_inprogress.html
+++ b/index_inprogress.html
@@ -3,11 +3,26 @@
     <head lang='en'>
         <meta charset='utf-8'>
         <title>Elise's Website: Wordle Helper</title>
-        <link rel='stylesheet' type='text/css' href='wordle/wordle.css'>
-        <script type='text/javascript' src='wordle/wordle.js'></script>
+        <link rel='stylesheet' type='text/css' href='main/main.css'>
+        <script type='text/javascript' src='main/main.js'></script>
     </head>
     <body>
-        <header></header>
+        <header>
+            <article id="header-section">
+                <a class="nav-item" href="https://www.google.com" target="_blank">About Me</a>
+                <div class="nav-item" id="projects">
+                    <a>Projects</a>
+                    <div id="list">
+                        <a href="https://www.google.com" target="_blank">Wordle</a>
+                        <!-- <li>item</li> -->
+                        <!-- <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li> -->
+                    </div>
+                </div>
+            </article>
+        </header>
         <main></main>
         <footer></footer>
     </body>
