--- a/index_inprogress.html
+++ b/index_inprogress.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <article id="header-section">
-                <a class="nav-item" href="https://www.google.com" target="_blank">About Me</a>
-                <div class="nav-item" id="projects">
+                <a class="nav-item load-bar" href="https://www.google.com" target="_blank">About Me</a>
+                <div class="nav-item load-bar" id="projects">
                     <a>Projects</a>
                     <div id="list">
-                        <a href="https://www.google.com" target="_blank">Wordle</a>
+                        <a href="https://www.google.com" target="_blank">Wordle Helper</a>
                         <!-- <li>item</li> -->
                         <!-- <li>item</li>
                         <li>item</li>
