create main page

--- a/main/index.html
+++ b/main/index.html
@@ -2,18 +2,18 @@
 <html xml:lang>
     <head lang='en'>
         <meta charset='utf-8'>
-        <title>Elise's Website: Wordle Helper</title>
+        <title>Elise's Website</title>
         <link rel='stylesheet' type='text/css' href='main/main.css'>
         <script type='text/javascript' src='main/main.js'></script>
     </head>
     <body>
         <header>
             <article id="header-section">
-                <a class="nav-item load-bar" href="https://www.google.com" target="_blank">About Me</a>
+                <!-- <a class="nav-item load-bar" href="https://www.google.com" target="_blank">About Me</a> -->
                 <div class="nav-item load-bar" id="projects">
                     <a>Projects</a>
                     <div id="list">
-                        <a href="https://www.google.com" target="_blank">Wordle Helper</a>
+                        <a href="https://eychoi11.github.io/wordle/wordle.html" target="_blank">Wordle Helper</a>
                         <!-- <li>item</li> -->
                         <!-- <li>item</li>
                         <li>item</li>
