--- a/wordle/wordle.html
+++ b/wordle/wordle.html
@@ -2,7 +2,7 @@
 <html xml:lang>
     <head lang='en'>
         <meta charset='utf-8'>
-        <title>Elise's Website: Wordle Helper</title>
+        <title>Wordle Helper</title>
         <link rel='stylesheet' type='text/css' href='wordle/wordle.css'>
         <script type='text/javascript' src='wordle/wordle.js'></script>
         <!-- <script src="./HeaderComponent.js" type="module"></script> -->
