--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <header>
             <article id="header-section">
-                <!-- <a class="nav-item load-bar" href="https://www.google.com" target="_blank">About Me</a> -->
+                <a class="nav-item load-bar" href="https://www.google.com" target="_blank">About Me</a>
+                <a class="nav-item load-bar" href="https://www.google.com" target="_blank">Resume</a>
                 <div class="nav-item load-bar" id="projects">
                     <a>Projects</a>
                     <div id="list">
@@ -23,7 +24,11 @@
                 </div>
             </article>
         </header>
-        <main></main>
+        <main>
+            <article>
+                <h1>Welcome! This page is currently under construction.</h1>
+            </article>
+        </main>
         <footer></footer>
     </body>
 </html>
