add resume, update stylings

--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
     <body>
         <header>
             <article id="header-section">
-                <a class="nav-item load-bar" href="https://www.google.com" target="_blank">About Me</a>
-                <a class="nav-item load-bar" href="https://www.google.com" target="_blank">Resume</a>
+                <a class="nav-item load-bar" href="#about-me">About Me</a>
+                <a class="nav-item load-bar" href="https://docs.google.com/document/d/1OwzIvEZeYb6vNOoD4NmXpphXH6j-03UCe9fxNPU5Flk/edit?usp=sharing" target="_blank">Resume</a>
                 <div class="nav-item load-bar" id="projects">
                     <a>Projects</a>
                     <div id="list">
                         <a href="https://eychoi11.github.io/wordle/wordle.html" target="_blank">Wordle Helper</a>
-                        <!-- <li>item</li> -->
-                        <!-- <li>item</li>
-                        <li>item</li>
-                        <li>item</li>
-                        <li>item</li> -->
                     </div>
                 </div>
             </article>
@@ -27,6 +22,17 @@
         <main>
             <article>
                 <h1>Welcome! This page is currently under construction.</h1>
+            </article>
+
+            <article id="intro">
+                <section class="container">
+                    <h1>Hi! My name is Elise Choi.</h1>
+                </section>
+            </article>
+            <article id="about-me">
+                <section class="container">
+                    <h1>About Me</h1>
+                </section>
             </article>
         </main>
         <footer></footer>
