--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <article id="header-section">
                 <a class="nav-item load-bar" href="#about-me">About Me</a>
                 <a class="nav-item load-bar" href="https://docs.google.com/document/d/1OwzIvEZeYb6vNOoD4NmXpphXH6j-03UCe9fxNPU5Flk/edit?usp=sharing" target="_blank">Resume</a>
+                <a class="nav-item load-bar" href="https://www.linkedin.com/in/elise-choi-65581b195/" target="_blank">LinkedIn</a>
                 <div class="nav-item load-bar" id="projects">
                     <a>Projects</a>
                     <div id="list">
