update about me and styling

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
             <article id="about-me">
                 <section class="container">
                     <h1>About Me</h1>
+                    <div>
+                        Hi, I’m Elise Choi, a software developer based in Seattle. I’m passionate about creating practical, user-centered solutions using technology. With a background in Environmental Science from the University of Washington, I developed a strong foundation in problem-solving and analytical thinking, which I now apply to software development. My experience spans Java, SQL, Salesforce, and AWS, and I’ve worked on everything from building custom applications to designing data systems that help businesses thrive.
+                    </div>
+                    <br>
+                    <div>
+                        I believe in the transformative power of technology to drive positive change, and that begins with fostering equity, inclusion, and diversity within the industry. I’m committed to developing inclusive solutions and working in environments where diverse perspectives are valued. I thrive on the challenge of solving complex problems, continuously learning new skills, and using technology to empower others. Whether collaborating with a team or tackling a solo project, I believe that thoughtful, well-crafted code can create a lasting impact.
+                    </div>
+                    <br>
+                    <div>
+                        When I’m not coding, you can find me playing board games with my friends, singing karaoke (badly), or creating art.
+                    </div>
                 </section>
             </article>
         </main>
