update about me message

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <section class="container">
                     <h1>About Me</h1>
                     <div>
-                        Hi, I’m Elise Choi, a software developer based in Seattle. I’m passionate about creating practical, user-centered solutions using technology. With a background in Environmental Science from the University of Washington, I developed a strong foundation in problem-solving and analytical thinking, which I now apply to software development. My experience spans Java, SQL, Salesforce, and AWS, and I’ve worked on everything from building custom applications to designing data systems that help businesses thrive.
+                        Hi, I’m Elise, a software developer based in Seattle. I’m passionate about creating practical, user-centered solutions using technology. With a background in Environmental Science from the University of Washington, I developed a strong foundation in problem-solving and analytical thinking, which I now apply to software development. My experience spans Java, SQL, Salesforce, and AWS, and I’ve worked on everything from building custom applications to designing data systems that help businesses thrive.
                     </div>
                     <br>
                     <div>
