add contact me section

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <meta charset='utf-8'>
         <title>Elise's Website</title>
         <link rel='stylesheet' type='text/css' href='main/main.css'>
+        <script src="https://kit.fontawesome.com/6f5be9a53f.js" crossorigin="anonymous"></script>
         <script type='text/javascript' src='main/main.js'></script>
     </head>
     <body>
         <header>
             <article id="header-section">
                 <a class="nav-item load-bar" href="#about-me">About Me</a>
+                <a class="nav-item load-bar" href="#skills">Skills</a>
+                <a class="nav-item load-bar" href="#contact-me">Contact Me</a>
                 <a class="nav-item load-bar" href="https://docs.google.com/document/d/1OwzIvEZeYb6vNOoD4NmXpphXH6j-03UCe9fxNPU5Flk/edit?usp=sharing" target="_blank">Resume</a>
                 <a class="nav-item load-bar" href="https://www.linkedin.com/in/elise-choi-65581b195/" target="_blank">LinkedIn</a>
                 <div class="nav-item load-bar" id="projects">
@@ -32,7 +35,7 @@
             </article>
             <article id="about-me">
                 <section class="container">
-                    <h1>About Me</h1>
+                    <h2>About Me</h2>
                     <div>
                         Hi, I’m Elise, a software developer based in Seattle. I’m passionate about creating practical, user-centered solutions using technology. With a background in Environmental Science from the University of Washington, I developed a strong foundation in problem-solving and analytical thinking, which I now apply to software development. My experience spans Java, SQL, Salesforce, and AWS, and I’ve worked on everything from building custom applications to designing data systems that help businesses thrive.
                     </div>
@@ -43,6 +46,39 @@
                     <br>
                     <div>
                         When I’m not coding, you can find me playing board games with my friends, singing karaoke (badly), or creating art.
+                    </div>
+                </section>
+            </article>
+            <article id="skills">
+                <section class="container">
+                    <h2>Technical Skills</h2>
+                    <div>
+                        <ul>
+                            <li>Java</li>
+                            <li>SQL</li>
+                            <li>SQL++</li>
+                            <li>Apex</li>
+                            <li>HTML</li>
+                            <li>JavaScript</li>
+                            <li>CSS</li>
+                            <li>REST API</li>
+                            <li>Gearset</li>
+                            <li>AWS CodeCommit</li>
+                            <li>Git</li>
+                            <li>Certified AWS Cloud Practitioner</li>
+                        </ul>
+                    </div>
+                </section>
+            </article>
+            <article id="contact-me">
+                <section class="container">
+                    <h2>Contact Me</h2>
+                    <div id="contact-left">
+                        <a href="https://github.com/eychoi11/eychoi11.github.io" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+                        <a href="https://www.linkedin.com/in/elise-choi-65581b195/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <div id="contact-right">
+
                     </div>
                 </section>
             </article>
