updating about me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <br>
                     <div>
-                        I believe in the transformative power of technology to drive positive change, and that begins with fostering equity, inclusion, and diversity within the industry. I’m committed to developing inclusive solutions and working in environments where diverse perspectives are valued. I thrive on the challenge of solving complex problems, continuously learning new skills, and using technology to empower others. Whether collaborating with a team or tackling a solo project, I believe that thoughtful, well-crafted code can create a lasting impact.
+                        I believe in the transformative power of technology to drive positive change, and that begins with fostering diversity, equity, and inclusion within the industry. I’m committed to developing inclusive solutions and working in environments where diverse perspectives are valued. I thrive on the challenge of solving complex problems, continuously learning new skills, and using technology to empower others. Whether collaborating with a team or tackling a solo project, I believe that thoughtful, well-crafted code can create a lasting impact.
                     </div>
                     <br>
                     <div>
