--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <article>
                 <h1>Welcome! This page is currently under construction.</h1>
             </article>
-
             <article id="intro">
                 <section class="container">
                     <h1>Hi! My name is Elise Choi.</h1>
@@ -36,7 +35,7 @@
                 <section class="container">
                     <h2>About Me</h2>
                     <div>
-                        Hi, I’m Elise, a software developer based in Seattle. I’m passionate about creating practical, user-centered solutions using technology. With a background in Environmental Science from the University of Washington, I developed a strong foundation in problem-solving and analytical thinking, which I now apply to software development. My experience spans Java, SQL, Salesforce, and AWS, and I’ve worked on everything from building custom applications to designing data systems that help businesses thrive.
+                        I’m Elise, a software developer based in Seattle. I’m passionate about creating practical, user-centered solutions using technology. With a background in Environmental Science from the University of Washington, I developed a strong foundation in problem-solving and analytical thinking, which I now apply to software development. My experience spans Java, SQL, Salesforce, and AWS, and I’ve worked on everything from building custom applications to designing data systems that help businesses thrive.
                     </div>
                     <br>
                     <div>
