updating technical skills

--- a/index.html
+++ b/index.html
@@ -52,17 +52,14 @@
                     <h2>Technical Skills</h2>
                     <div>
                         <ul>
-                            <li>Java</li>
-                            <li>SQL</li>
-                            <li>SQL++</li>
-                            <li>Apex</li>
-                            <li>HTML</li>
-                            <li>JavaScript</li>
-                            <li>CSS</li>
+                            <li>Java, Apex</li>
+                            <li>SQL, SQL++, SOQL</li>
+                            <li>HTML, JavaScript, CSS</li>
                             <li>REST API</li>
-                            <li>Gearset</li>
+                            <li>Gearset, CI/CD</li>
                             <li>AWS CodeCommit</li>
                             <li>Git</li>
+                            <li>Jira</li>
                             <li>Certified AWS Cloud Practitioner</li>
                         </ul>
                     </div>
