--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <section class="container">
                     <h2>Contact Me</h2>
                     <div id="contact-left">
-                        <a href="mailto:eliseychoi@gmail.com" class="email"><i class="fa-solid fa-envelope"></i>eliseychoi@gmail.com</a>
+                        <a href="mailto:eliseychoi@gmail.com"><i class="fa-solid fa-envelope"></i>eliseychoi@gmail.com</a>
                         <p><i class="fa-solid fa-square-phone"></i>(425)281-5719</p>
                         <a href="https://github.com/eychoi11/eychoi11.github.io" target="_blank"><i class="fa-brands fa-square-github"></i></a>
                         <a href="https://www.linkedin.com/in/elise-choi-65581b195/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
