--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel='stylesheet' type='text/css' href='main/main.css'>
         <script src="https://kit.fontawesome.com/6f5be9a53f.js" crossorigin="anonymous"></script>
         <script type='text/javascript' src='main/main.js'></script>
+        <link rel="icon" type="image/x-icon" href="images/sunset.png">
     </head>
     <body>
         <header>
