create art portfolio

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <a>Projects</a>
                     <div id="list">
                         <a href="https://eychoi11.github.io/wordle/wordle.html" target="_blank">Wordle Helper</a>
+                        <a href="https://eychoi11.github.io/wordle/portfolio.html" target="_blank">Art Portfolio</a>
                     </div>
                 </div>
             </article>
