--- a/wordle/wordle.html
+++ b/wordle/wordle.html
@@ -5,6 +5,7 @@
         <title>Wordle Helper</title>
         <link rel='stylesheet' type='text/css' href='wordle.css'>
         <script type='text/javascript' src='wordle.js'></script>
+        <link rel="shortcut icon" href="https://www.nytimes.com/games-assets/v2/assets/wordle/wordle_logo_32x32.png">
     </head>
     <body>
         <header></header>
