add back to home page in portfolio

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -10,6 +10,7 @@
     <body>
         <header>
             <article id="header-section">
+              <a class="nav-item load-bar" href="https://eychoi11.github.io/index.html">Home Page</a>
                <div class="nav-item load-bar" id="projects">
                     <a>Projects</a>
                     <div id="list">
