add formatting to wordle

--- a/wordle/wordle.html
+++ b/wordle/wordle.html
@@ -4,11 +4,23 @@
         <meta charset='utf-8'>
         <title>Wordle Helper</title>
         <link rel='stylesheet' type='text/css' href='wordle.css'>
+        <link rel='stylesheet' type='text/css' href='../main/main.css'>
         <script type='text/javascript' src='wordle.js'></script>
         <link rel="shortcut icon" href="https://www.nytimes.com/games-assets/v2/assets/wordle/wordle_logo_32x32.png">
     </head>
     <body>
-        <header></header>
+        <header>
+            <article id="header-section">
+              <a class="nav-item load-bar" href="https://eychoi11.github.io/index.html">Home Page</a>
+               <div class="nav-item load-bar" id="projects">
+                    <a>Projects</a>
+                    <div id="list">
+                        <a href="https://eychoi11.github.io/wordle/wordle.html" target="_blank">Wordle Helper</a>
+                        <a href="https://eychoi11.github.io/wordle/portfolio.html" target="_blank">Art Portfolio</a>
+                    </div>
+                </div>
+            </article>
+        </header>
         <main>
             <section id='instructions'>
                 <h1>Wordle Helper Instructions</h1>
