add more images to portfolio, add feedback on hover

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -35,6 +35,32 @@
                 <img src="../images/sunset-3.png" alt="Image of a pixel art sunset.">
                 <div class="desc">Image of a pixel art sunset.</div>
               </section>
+              <section class="image">
+                <img src="../images/pixel-rose.png" alt="Image of a pixel art rose.">
+                <div class="desc">Image of a pixel art rose.</div>
+              </section>
+              <section class="image">
+                <img src="../images/tree-tattoo.png" alt="Image of a simplistic digitally drawn tree.">
+                <div class="desc">Image of a simplistic digitally drawn tree, designed to be a tattoo.</div>
+              </section>
+              <section class="image">
+                <img src="../images/soulless-pfp.png" alt="Image of character wearing a Halo helmet, petting a Huragok.">
+                <div class="desc">Image of character wearing a Halo helmet, petting a Huragok. Comissioned by </div>
+              </section>
+              <section class="image">
+                <img src="../images/portrait.png" alt="Digitally drawn self portrait.">
+                <div class="desc">Digitally drawn self portrait.</div>
+              </section>
+              <section class="image">
+                <img src="../images/milk-banner.png" alt="Image of a generator inside of a cabin, from the game Dead By Daylight.">
+                <div class="desc">Image of a generator inside of a cabin, from the game Dead By Daylight. Comissioned to be a twitch banner.</div>
+              </section>
+            </section>
+            <section id="animations" class="art">
+              <section class="image">
+                <img src="../images/end-card.gif" alt="Gif of a person, with a ghost coming from their mouth.">
+                <div class="desc">Gif of a person, with a ghost coming from their mouth.</div>
+              </section>
             </section>
           </article>
         </main>
