update description of image

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -45,7 +45,7 @@
               </section>
               <section class="image">
                 <img src="../images/soulless-pfp.png" alt="Image of character wearing a Halo helmet, petting a Huragok.">
-                <div class="desc">Image of character wearing a Halo helmet, petting a Huragok. Comissioned by </div>
+                <div class="desc">Image of character wearing a Halo helmet, petting a Huragok. Comissioned to be a twitch emote.</div>
               </section>
               <section class="image">
                 <img src="../images/portrait.png" alt="Digitally drawn self portrait.">
